configure.ac modified to truly detect the installed the right lua name

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -148,7 +148,7 @@ m4trace:configure.ac:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE([sumwars], [0.1])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.11.1])
+m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.11])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:6: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -251,6 +251,72 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^DEPS_CFLAGS$])
 m4trace:configure.ac:13: -1- AC_SUBST([DEPS_LIBS])
 m4trace:configure.ac:13: -1- AC_SUBST_TRACE([DEPS_LIBS])
 m4trace:configure.ac:13: -1- m4_pattern_allow([^DEPS_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
+m4trace:configure.ac:15: -1- AC_SUBST([LUA_LIBS])
+m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_LIBS])
+m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_LIBS$])
 m4trace:configure.ac:15: -1- AC_SUBST([LUA_CFLAGS])
 m4trace:configure.ac:15: -1- AC_SUBST_TRACE([LUA_CFLAGS])
 m4trace:configure.ac:15: -1- m4_pattern_allow([^LUA_CFLAGS$])
