--- a/translation/de/sumwars-xml.po
+++ b/translation/de/sumwars-xml.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2009 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the sumwars package
 # Michael <michael@localhost.localdomain>, 2009
-#
+# 
 # kalimgard <kalimgard@users.sourceforge.net>, 2010.
 msgid ""
 msgstr ""
@@ -13,7 +13,7 @@ msgstr ""
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -1253,10 +1253,6 @@ msgstr "Nördliche Wiese"
 msgid "Brons Farm"
 msgstr "Brons Farm"
 
-#: scene6.xml
-msgid "Hauptquest: melde dich bei General G"
-msgstr "Melde dich bei General Greif"
-
 #: maylons_grave.xml
 msgid "Maylons Grab"
 msgstr "Maylons Grab"
@@ -1933,6 +1929,9 @@ msgstr "Alraune"
 #: npcStats.xml
 msgid "Peasant"
 msgstr "Bauer"
+
+#~ msgid "Hauptquest: melde dich bei General G"
+#~ msgstr "Melde dich bei General Greif"
 
 #~ msgid "Besieged Farm"
 #~ msgstr "Der bleagerte Bauernhof"
