--- a/translation/de/sumwars-xml.po
+++ b/translation/de/sumwars-xml.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-05-10 \n"
+"PO-Revision-Date: 2010-05-20 22:01+0200\n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -1126,7 +1126,7 @@ msgid "I see you have reached dwarfenwall safely."
 msgstr "Ich sehe dass ihr Zwergentrutz sicher erreicht habt."
 
 #: goblins.xml
-msgid "Der Goblinvernichter"
+msgid "The goblinslayer"
 msgstr "Der Goblinvernichter"
 
 #: goblins.xml
@@ -1138,7 +1138,7 @@ msgid "Goblins"
 msgstr "Goblins"
 
 #: goblins.xml
-msgid "Goblins (Belohnung)"
+msgid "Goblins (reward)"
 msgstr "Goblins (Belohnung)"
 
 #: goblins.xml
@@ -1154,7 +1154,7 @@ msgid "Derred"
 msgstr "Derred"
 
 #: tutorial.xml
-msgid "Waffen abgeben"
+msgid "Surrender weapons"
 msgstr "Waffen abgeben"
 
 #: tutorial.xml
@@ -1162,31 +1162,31 @@ msgid "Tolec"
 msgstr "Tolec"
 
 #: tutorial.xml
-msgid "Inventar erklären"
+msgid "Explain inventory"
 msgstr "Inventar erklären"
 
 #: tutorial.xml
-msgid "Schnecken angreifen"
+msgid "Attack slugs"
 msgstr "Schnecken angreifen"
 
 #: tutorial.xml
-msgid "Levelup erklären"
+msgid "Explain level up"
 msgstr "Levelup erklären"
 
 #: tutorial.xml
-msgid "Futterklappe öffnen"
+msgid "Open hatch"
 msgstr "Futterklappe öffnen"
 
 #: tutorial.xml
-msgid "Fähigkeiten erklären"
+msgid "Explain skills"
 msgstr "Fähigkeiten erklären"
 
 #: tutorial.xml
-msgid "Geheimtuer oeffnen"
+msgid "Open secret door"
 msgstr "Geheimtuer oeffnen"
 
 #: scene7.xml
-msgid "Das Teichmonster"
+msgid "The Poolmonster"
 msgstr "Das Teichmonster"
 
 #: scene7.xml
@@ -1198,7 +1198,7 @@ msgid "greyCurseLake"
 msgstr "Versteckter See"
 
 #: theFissure.xml
-msgid "Der Hinterhalt der Untoten"
+msgid "The ambush of the undead"
 msgstr "Der Hinterhalt der Untoten"
 
 #: theFissure.xml
@@ -1210,7 +1210,7 @@ msgid "greyCurseCaveDep"
 msgstr "Verfluchte Höhlen, Tiefe"
 
 #: siegeOfDwarfenwall.xml
-msgid "Defend dwarfenwall"
+msgid "Defend Dwarfenwall"
 msgstr "Verteidigt Zwergentrutz"
 
 #: siegeOfDwarfenwall.xml
@@ -1234,7 +1234,7 @@ msgid "aisWolfstones"
 msgstr "Wolfssteine"
 
 #: besieged_farm.xml
-msgid "Der belagerte Bauernhof"
+msgid "The besieged farm"
 msgstr "Der belagerte Bauernhof"
 
 #: besieged_farm.xml
@@ -1242,8 +1242,8 @@ msgid "Sergeant Lutterer"
 msgstr "Sergeant Lutterer"
 
 #: besieged_farm.xml
-msgid "Der Bauernhof"
-msgstr "Der Bauernhof"
+msgid "The farm"
+msgstr "Die Farm"
 
 #: besieged_farm.xml
 msgid "aisNorthMeadow"
@@ -1254,7 +1254,7 @@ msgid "Brons Farm"
 msgstr "Brons Farm"
 
 #: maylons_grave.xml
-msgid "Maylons Grab"
+msgid "Maylons Grave"
 msgstr "Maylons Grab"
 
 #: maylons_grave.xml
@@ -1274,7 +1274,7 @@ msgid "aisMaylonsGraveL2"
 msgstr "Maylons Grab, Krypta"
 
 #: herbalist.xml
-msgid "Kraeutersammler"
+msgid "Herb collector"
 msgstr "Kräutersammler"
 
 #: herbalist.xml
@@ -1306,7 +1306,7 @@ msgid "Fortify Dwarfenwall"
 msgstr "Vesrtärke Zwergentrutz"
 
 #: fortify_dwarfenwall.xml
-msgid "Windklaue sprechen"
+msgid "Speak with Windclaw"
 msgstr "Windklaue sprechen"
 
 #: fortify_dwarfenwall.xml
@@ -1314,12 +1314,12 @@ msgid "medBackalley"
 msgstr "Hintergassen"
 
 #: rob_the_robber.xml
-msgid "Rob der Raeuber"
+msgid "Rob the robber"
 msgstr "Rob der Räuber"
 
 #: rob_the_robber.xml
-msgid "Steckbrief"
-msgstr "Ein lukrativer Steckbrief"
+msgid "Wanted poster"
+msgstr "Steckbrief"
 
 #: rob_the_robber.xml
 msgid "Sergeant Wober"
@@ -1334,7 +1334,7 @@ msgid "aisDarkFairyforest"
 msgstr "Dunkler Feenwald"
 
 #: rescue_willard.xml
-msgid "Ein Freund in Not"
+msgid "A friend in need"
 msgstr "Ein Freund in Not"
 
 #: rescue_willard.xml
@@ -1342,7 +1342,7 @@ msgid "Willard"
 msgstr "Willard"
 
 #: rescue_willard.xml
-msgid "Willard (Reward)"
+msgid "Give Willard the stone (Reward)"
 msgstr "Willard den Stein geben (Belohnung)"
 
 #: rescue_willard.xml
@@ -1929,31 +1929,3 @@ msgstr "Alraune"
 #: npcStats.xml
 msgid "Peasant"
 msgstr "Bauer"
-
-#~ msgid "Hauptquest: melde dich bei General G"
-#~ msgstr "Melde dich bei General Greif"
-
-#~ msgid "Besieged Farm"
-#~ msgstr "Der bleagerte Bauernhof"
-
-#~ msgid "Besieged Farm (Reward)"
-#~ msgstr "Der belagerte Bauernhof(Belohnung)"
-
-#~ msgid "Brons Safety"
-#~ msgstr "Brons Familie ist sicher"
-
-# TODO Trade
-#~ msgid "Handel"
-#~ msgstr "Handel"
-
-#~ msgid "goblin chieftain"
-#~ msgstr "Goblinhäuptling"
-
-#~ msgid "phantom"
-#~ msgstr "Phantom"
-
-#~ msgid "harpy"
-#~ msgstr "Harpie"
-
-#~ msgid "Scene1"
-#~ msgstr "Hilfe für Zwergentrutz"
